src/test/ui/derived-errors/issue-30580.stderr
error[E0609]: no field `c` on type `&Foo`
  --> $DIR/issue-30580.rs:12:11
   |
LL |         b.c; //~ ERROR no field `c` on type `&Foo`
   |           ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
